[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/ClickableSprite.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[node name="ClickableSprite" type="Node2D"]
visible = false
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
